overflow-x on login screen fixed. rendering issue fixed

--- a/client/src/styles/application.scss
+++ b/client/src/styles/application.scss
@@ -16,6 +16,7 @@ element {
 
 body {
   background-color:#0D212D;
+  overflow-x: hidden;
 }
 
 $light-color: gray;
